# automated_web_scraper

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
src/: App.css  App.tsx  HackingLoader.css  HackingLoader.tsx  SplashScreen.css  SplashScreen.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  email.rs  export.rs  main.rs  models.rs  scheduler.rs  scraper.rs
