[package]
name = "automated_web_scraper"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.29", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.17"
tokio-cron-scheduler = "0.9"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
lettre = "0.11"
csv = "1.3"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
once_cell = "1.19"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
